[tool.ruff]
exclude = ["examples", "docs", "build"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "TCH",
    "N",
    "D2",
    "D3",
    "D415",
    "D417",
    "D418",
    "D419",
    "Q",
    "RSE",
    "SIM",
    "RUF",
]
ignore = ["F405", "F403", "E501", "D203", "D205", "D213", "RUF001"]
fixable = ["I", "TCH", "D"]


[tool.mypy]
ignore_errors = true # I use pyright only because mypy dumb

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportPrivateUsage = "none"

[tool.poetry]
name = "snedbot"
version = "0.1.0"
description = "Your friendly neighbourhood multi-purpose Discord bot."
authors = ["hypergonial <git@hypergonial.com>"]
license = "GNU GPL-v3"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dateparser = "^1.1.8"
psutil = "^5.9.6"
Pillow = "^10.2.0"
types-Pillow = "^10.2.0"
asyncpg = "^0.29.0"
asyncpg-stubs = "^0.29.0"
Levenshtein = "^0.23.0"
uvloop = { version = "==0.18.0", platform = "linux" }
aiodns = "~=3.1.1"
Brotli = "~=1.0"
ciso8601 = "~=2.3"
kosu = { git = "https://github.com/hypergonial/kosu.git" }
hikari-arc = "~=1.3.4"
hikari-toolbox = "~=0.1.6"
hikari-miru = "~=4.1.1"

[tool.poetry.dev-dependencies]
nox = "^2023.4.22"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
